@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.231 2006/09/06 14:44:18 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.232 2006/09/10 19:17:05 agaffney Exp $
+
+  10 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/fe/gtk/Partitioning.py:
+  add 'apple_bootstrap' to color map
 
   6 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/fe/gtk/MakeDotConf.py:
