@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.678 2006/09/09 22:25:20 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.679 2006/09/10 19:17:05 agaffney Exp $
+
+  10 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIStorageDevice.py:
+  properly identify apple_bootstrap partitions
 
   9 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
